Added feature that show drivers location to the user

--- a/app/src/main/res/layout/activity_driver_location.xml
+++ b/app/src/main/res/layout/activity_driver_location.xml
@@ -16,6 +16,19 @@
         android:layout_height="match_parent"
         tools:context=".DriverLocationActivity" />
 
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:onClick="logout"
+        android:text="Logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/acceptRequestButton"
         android:layout_width="wrap_content"
