--- a/app/src/main/res/layout/activity_rider.xml
+++ b/app/src/main/res/layout/activity_rider.xml
@@ -28,4 +28,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"/>
 
+    <TextView
+        android:id="@+id/infoTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|bottom"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="#AEAEAF" />
+
 </fragment>
